--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "config": "config/config.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "http-status-codes": "^2.3.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "pg": "^8.14.1",
     "pg-hstore": "^2.3.4",
