--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "migrate": "npx sequelize-cli db:migrate",
-    "seed": "npx sequelize-cli db:seed:all"
+    "migrate": "npx sequelize-cli db:migrate --config config/config.js",
+    "seed": "npx sequelize-cli db:seed:all --config config/config.js"
   },
   "keywords": [],
   "author": "",
