--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "mongoose": "^8.13.2",
     "pg": "^8.14.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.7"
-  },
-  "devDependencies": {
+    "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.2"
   }
 }
