--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "migrate": "npx sequelize-cli db:migrate --config config/config.js",
-    "seed": "npx sequelize-cli db:seed:all --config config/config.js"
+    "migrate": "npx sequelize-cli db:migrate --config src/config/config.js",
+    "seed": "npx sequelize-cli db:seed:all --config src/config/config.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "sequelize": {
-    "config": "config/config.js"
+    "config": "src/config/config.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
